# ms-bfs

./: Makefile  README.md  README.txt  compile.sh  graph.cpp  io.cpp  log.cpp  main.cpp  query4.cpp  query4.hpp  runBencher.cpp  scheduler.cpp  worker.cpp
bfs/: batch128.cpp  batch256.cpp  batch64.cpp  naive.cpp  noqueue.cpp  parabfs.cpp  sc2012.cpp  sse.cpp
include/: TraceStats.hpp  bench.hpp  bench.hpp.bak  graph.hpp  hashtable.hpp  idschedulers.hpp  io.hpp  log.hpp  macros.hpp  pool.hpp  queue.hpp  scheduler.hpp  tokenizer.hpp  topklist.hpp  worker.hpp
include/bfs/: base.hpp  batch128.hpp  batch256.hpp  batch64.hpp  batchdistance.hpp  batchhuge.hpp  batchhugedeferred.hpp  bitops.hpp  naive.hpp  noqueue.hpp  parabfs.hpp  sc2012.hpp  sse.hpp  statistics.hpp
test_queries/: ldbc10k.txt
vida/src/: CMakeLists.txt  Makefile  README.md  README.txt  compile.sh  hsort.hpp  msbfs.hpp  naive.hpp  parabfs.hpp  person_graph.hpp  query.cpp
vida/src/data/: ldbc10k.csv  ldbc10k.txt
